--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                         </ul>
                      </li>
                     <li><a href="contactus.html"><i class= "fa fa-envelope-o"></i> Contact Me</a></li>
+                    <li><button class="btn btn-primary btn-lg" onclick="aud_play_pause()">Play/Pause</button></li>
+                    <li><audio id="Mis-Imp"><source src="sounds/Mission-Impossible.mp3" type="audio/mpeg"></audio></li>
                 </ul>
             </div>
             </div>
@@ -103,6 +105,12 @@
                          </p>
                         <p><a class="btn btn-primary btn-lg" href="#">More &raquo;</a></p>
                         </div>
+                        <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
+                    <span class="sr-only">Next</span>
+                </a>
                     </div>
                 </div>
 
@@ -148,6 +156,7 @@
                 <h2>Weekend Grand Buffet</h2>
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                 <p><a href="#">More &raquo;</a></p>
+                <img class="lazy img-responsive" data-original="Hershal1.jpg" width= "130" height="130" src= "Hershal1.jpg">
             </div>
         </div>
 
@@ -209,6 +218,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="jquery.js"></script>
+    <script src="jquery.lazyload.js"></script>
+    <script type="text/javascript">
+        $('.carousel').carousel();
+    
+    </script>
+    <script>
+function aud_play_pause() {
+  var myAudio = document.getElementById("Mis-Imp");
+  if (myAudio.paused) {
+    myAudio.play();
+  } else {
+    myAudio.pause();
+  }
+}
+</script>
    
 </body>
 
